WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
245694
AX: AXIsolatedTree::updateChildren doesn't propagate updates downwards when AccessibilityObject::m_subtreeDirty is true
https://bugs.webkit.org/show_bug.cgi?id=245694
Summary
AX: AXIsolatedTree::updateChildren doesn't propagate updates downwards when A...
Tyler Wilcock
Reported
2022-09-26 13:44:13 PDT
AXIsolatedTree::updateChildren doesn't propagate updates downwards when AccessibilityObject::m_subtreeDirty is true
Attachments
Patch
(4.58 KB, patch)
2022-09-26 14:11 PDT
,
Tyler Wilcock
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2022-09-26 13:44:26 PDT
<
rdar://problem/100426498
>
Tyler Wilcock
Comment 2
2022-09-26 13:44:44 PDT
rdar://100245048
Tyler Wilcock
Comment 3
2022-09-26 14:11:24 PDT
Created
attachment 462631
[details]
Patch
chris fleizach
Comment 4
2022-09-26 14:14:27 PDT
Comment on
attachment 462631
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=462631&action=review
> Source/WebCore/accessibility/isolatedtree/AXIsolatedTree.cpp:598 > + if (auto* liveChild = dynamicDowncast<AccessibilityObject>(newChildren[i].get()); liveChild && liveChild->hasDirtySubtree())
this is nice to string these in a single if. is this a new ability
Tyler Wilcock
Comment 5
2022-09-26 18:37:40 PDT
(In reply to chris fleizach from
comment #4
)
> Comment on
attachment 462631
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=462631&action=review
> > > Source/WebCore/accessibility/isolatedtree/AXIsolatedTree.cpp:598 > > + if (auto* liveChild = dynamicDowncast<AccessibilityObject>(newChildren[i].get()); liveChild && liveChild->hasDirtySubtree()) > > this is nice to string these in a single if. is this a new ability
Indeed! It came with C++17.
EWS
Comment 6
2022-09-26 23:51:15 PDT
Committed
254899@main
(523acc306f2b): <
https://commits.webkit.org/254899@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 462631
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug